--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
 </head>
 <body>
     <p>안오고뭐하맨??</p>
-    <a href="/auth/google">Login with google</a>
+    <a href="/oauth/google">Login with google</a>
 
-    <a href="/auth/apple">Login with apple</a>
+    <a href="/oauth/apple">Login with apple</a>
 
   <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div>
   <script>
