--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <p>안오고뭐하맨??</p>
     <a href="/oauth/google">Login with google</a>
 
-    <a href="/apple">Login with apple</a>
+    <a href="/oauth/apple">Login with apple</a>
 
   <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div>
   <script>
