수정 테스트

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,19 @@
 
     <a href="/oauth/apple/callback">Login with apple</a>
 
+    <script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
+        <div id="appleid-signin" data-color="black" data-border="true" data-type="sign in"></div>
+        <script type="text/javascript">
+            AppleID.auth.init({
+                clientId : 'shop.sprataprac.api',
+                scope : 'name email',
+                redirectURI : 'https://api.sprataprac.shop/oauth/apple/callback',
+                state : '[STATE]',
+                nonce : '[NONCE]',
+                usePopup : true
+            });
+        </script>
+
   <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div>
   <script>
     function onSignIn(googleUser) {
