--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 
     <a href="/oauth/apple/callback">Login with apple</a>
     
-    <a href="https://appleid.apple.com/auth/authorize?client_id=shop.sprataprac.api&redirect_uri=https://api.sprataprac.shop/oauth/apple/callback&response_type=code id_token&state=[STATE]&scope=[SCOPES]&response_mode=form_post">Sign In with Apple</a>
+    <a href="https://appleid.apple.com/auth/authorize?client_id=shop.sprataprac.api&redirect_uri=https://api.sprataprac.shop/oauth/apple/callback&response_type=code id_token&state=signin&scope=name email&response_mode=form_post">Sign In with Apple</a>
 
   <!-- <div class="g-signin2" data-onsuccess="onSignIn"></div>
   <script>
